tests/fixtures/errors/bare_create_null.z
# E0300: a type with create: null does not construct from its bare name.
Opaque: class {
    n: 0.u32
} as {
    create: null
}

main: function is {
    k: Opaque
    print "\{k.n}"
}
